# deeptask_personality_recognizer

./: .gitignore  .gitmodules  README.md  requirements.txt  requirements_py2.txt  requirements_py3.txt
audio_msgs/: CMakeLists.txt  package.xml
audio_msgs/msg/: FeatureData.msg
audio_signal_processor/: CMakeLists.txt  package.xml
audio_signal_processor/script/: audio_signal_gui.py  audio_signal_processor.py  audio_signal_processor_test.py
audio_signal_processor/script/modules/: pitch.py  pitch_processor.py  test.py
audio_streamer/: CMakeLists.txt  package.xml
audio_streamer/script/: audio_stream_from_mic.py  audio_stream_from_mic_trigger.py  check_input_device.py
bringup_personality_recognizer/: CMakeLists.txt  package.xml
bringup_personality_recognizer/launch/: standard.launch  wo_mic.launch
dummy_perception_manager/: CMakeLists.txt  package.xml
dummy_perception_manager/script/: dummy_perception_manager.py
feature_handler/: CMakeLists.txt  package.xml
feature_handler/scripts/: data.csv  text_normalizer.py
model_interfacer/: CMakeLists.txt  package.xml
model_interfacer/scripts/: 3c_percentile.csv  cal_percentile.py  model_interfacer.py
model_interfacer/scripts/models/: gb_agr.sav  gb_con.sav  gb_ext.sav  gb_neu.sav  gb_opn.sav  lr_agr.sav  lr_con.sav  lr_ext.sav  lr_neu.sav  lr_opn.sav
speech_to_text_converter/: CMakeLists.txt  package.xml
speech_to_text_converter/scripts/: service_key.json  stt_converter_v4.py
text_translator/: CMakeLists.txt  package.xml
text_translator/scripts/: text_translator.py
