<package>
   <name>audio_msgs</name>
   <version>0.3.1</version>
   <description>
      Messages for transmitting audio via ROS
   </description>
   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
   <license>BSD</license>

   <buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>



   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
</package>
